--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,17 @@ services:
       - "${DB_PORT}:${DB_PORT}"
     volumes:
       - mongodata:/data/db
+  cypress:
+    image: "cypress/included:14.0.3"  # Cypress Docker Image
+    depends_on:
+      - app
+    network_mode: "service:app"  # Ensures Cypress can reach the app
+    environment:
+      - CYPRESS_baseUrl=http://app:3000
+    working_dir: /app
+    volumes:
+      - .:/app
+      - ./cypress/screenshots:/app/cypress/screenshots
 volumes:
   mongodata:
     driver: local
