--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - mongodata:/data/db
   cypress:
     image: "cypress/included:14.0.3"  # Cypress Docker Image
+    user: root
     depends_on:
       - app
     network_mode: "service:app"  # Ensures Cypress can reach the app
