testing localhost again

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Check if App is Running
         run: |
-          echo "Checking app URL: http://app:3000"
-          curl -I http://app:3000 || exit 1
+          echo "Checking app URL: http://localhost:3000"
+          curl -I http://localhost:3000 || exit 1
 
       - name: Wait for the app to be ready
         run: sleep 15  # Ensures the app is ready before running tests
