--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,49 +1,61 @@
-name: Cypress Tests (Manual Trigger)
+name: Integration Tests
 
 on:
-  workflow_dispatch:  # Runs only when manually triggered
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      docker:
+        image: docker:20.10.7
+        options: --privileged
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Set up Docker BuildKit
-        run: |
-          export DOCKER_BUILDKIT=1
-          docker version
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Create .env file from GitHub Secrets
-        run: |
-          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker Containers
-        run: docker compose up -d --build
+      - name: Build and Start Services
+        run: docker-compose up -d --build
 
-      - name: Check if App is Running
-        run: |
-          echo "Checking app URL: http://localhost:3000"
-          curl -I http://localhost:3000 || exit 1
-
-      - name: Wait for the app to be ready
-        run: sleep 15  # Ensures the app is ready before running tests
+    #   - name: Wait for Services to be Ready
+    #     run: |
+    #       echo "Waiting for services to be ready..."
+    #       for i in {1..10}; do
+    #         if curl -s http://localhost:3000 > /dev/null; then
+    #           echo "App is up!"
+    #           break
+    #         fi
+    #         echo "Waiting for app to start..."
+    #         sleep 5
+    #       done
 
       - name: Run Cypress Tests
-        run: docker compose --profile testing run --rm cypress
+        run: docker-compose run --rm cypress
 
-      - name: Stop Containers
-        run: docker compose down
-
-      - name: Upload Cypress Screenshots and Videos
+      - name: Upload Cypress Artifacts
         if: failure()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: cypress-results
+          name: cypress-artifacts
           path: |
             cypress/screenshots
             cypress/videos
+
+      - name: Tear Down Services
+        run: docker-compose down --volumes
