--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,62 +1,44 @@
 name: Integration Tests
 
 on:
-    workflow_dispatch:
-    # push:
-    # branches:
-    #     - main
-    # pull_request:
-    # branches:
-    #     - main
+  workflow_dispatch:  # Runs only when manually triggered
 
 jobs:
-    test:
+  test:
     runs-on: ubuntu-latest
 
     services:
-        docker:
+      docker:
         image: docker:20.10.7
         options: --privileged
 
     steps:
-        - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-        - name: Log in to DockerHub
+      - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-        - name: Build and Start Services
+      - name: Build and Start Services
         run: docker-compose up -d --build
 
-    #   - name: Wait for Services to be Ready
-    #     run: |
-    #       echo "Waiting for services to be ready..."
-    #       for i in {1..10}; do
-    #         if curl -s http://localhost:3000 > /dev/null; then
-    #           echo "App is up!"
-    #           break
-    #         fi
-    #         echo "Waiting for app to start..."
-    #         sleep 5
-    #       done
-
-        - name: Run Cypress Tests
+      - name: Run Cypress Tests
         run: docker-compose run --rm cypress
 
-        - name: Upload Cypress Artifacts
+      - name: Upload Cypress Artifacts
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-            name: cypress-artifacts
-            path: |
+          name: cypress-artifacts
+          path: |
             cypress/screenshots
             cypress/videos
 
-        - name: Tear Down Services
+      - name: Tear Down Services
         run: docker-compose down --volumes
