--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -34,6 +34,24 @@ jobs:
       - name: Build and Start Services
         run: docker compose up -d --build
 
+      - name: Debug Docker Containers & Networks
+        run: |
+          docker ps -a
+          docker network inspect yelpcamp_network
+
+
+      - name: Wait for Services to be Ready
+        run: |
+          echo "Waiting for app to start..."
+          for i in {1..10}; do
+          if curl -s http://localhost:3000 > /dev/null; then
+            echo "App is up!"
+            break
+          fi
+          echo "Retrying in 5 seconds..."
+          sleep 5
+          done
+
       - name: Run Cypress Tests
         run: docker compose run --rm cypress
 
