adding cypress entrypoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     environment:
       - CYPRESS_baseUrl=http://app:3000
     working_dir: /app
+    entrypoint: /bin/sh -c "npm install dotenv && cypress run"
     volumes:
       - .:/app
       - ./cypress/screenshots:/app/cypress/screenshots
