adding real app name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     profiles:
       - testing
     environment:
-      - CYPRESS_baseUrl=http://app:3000
+      - CYPRESS_baseUrl=http://yelpcamp-app-1:3000
     working_dir: /app
     entrypoint: /bin/sh -c "npm install dotenv && cypress run"
     volumes:
