--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           echo "Waiting for app to start..."
           for i in {1..10}; do
-          if curl -s http://localhost:3000 > /dev/null; then
+          if curl -s http://yelpcamp-app-1:3000 > /dev/null; then
             echo "App is up!"
             break
           fi
