--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,12 +31,12 @@ services:
     networks:
       - yelpcamp_network
   cypress:
-    image: "cypress/included:14.0.3"  # Cypress Docker Image
+    image: "cypress/included:14.0.1"  # Cypress Docker Image
     user: root
     depends_on:
       - app
-    profiles:
-      - testing
+    networks:
+      - yelpcamp_network
     environment:
       - CYPRESS_baseUrl=http://yelpcamp-app-1:3000
     working_dir: /app
