--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,7 +1,9 @@
 name: Integration Tests
 
 on:
-  workflow_dispatch:  # Runs only when manually triggered
+  push:
+    branches:
+      - main
 
 jobs:
   test:
