--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -1,4 +1,4 @@
-name: Integration Tests
+name: Run Cypress Tests
 
 on:
   push:
@@ -6,67 +6,20 @@ on:
       - main
 
 jobs:
-  test:
+  cypress-run:
     runs-on: ubuntu-latest
-
-    services:
-      docker:
-        image: docker:20.10.7
-        options: --privileged
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Install dependencies
+        run: npm install
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
+      - name: Start the server
+        run: node app.js &
+
+      - name: Run Cypress tests
+        uses: cypress-io/github-action@v6
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Create .env file from GitHub Secrets
-        run: |
-          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env
-
-      - name: Build and Start Services
-        run: docker compose up -d --build
-
-      - name: Debug Docker Containers & Networks
-        run: |
-          docker ps -a
-          docker logs yelpcamp-app-1
-          docker network ls
-          docker network inspect yelpcamp_network
-
-
-      - name: Wait for Services to be Ready
-        run: |
-          echo "Waiting for app to start..."
-          for i in {1..10}; do
-          if curl -s http://yelpcamp-yelpcamp-app-1:3000 > /dev/null; then
-            echo "App is up!"
-            break
-          fi
-          echo "Retrying in 5 seconds..."
-          sleep 5
-          done
-
-      - name: Run Cypress Tests
-        run: docker compose run --rm cypress
-
-      - name: Upload Cypress Artifacts
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-artifacts
-          path: |
-            cypress/screenshots
-            cypress/videos
-
-      - name: Tear Down Services
-        run: docker-compose down --volumes
+          wait-on: 'http://localhost:3000'
+          wait-on-timeout: 120
