--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: push mock data
+        run: node seeds/index.js
+
       - name: Start the server
         run: node app.js &
 
