adding to env file

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -30,6 +30,8 @@ jobs:
           echo "ADMIN_USER=${{ secrets.ADMIN_USER }}" >> .env
           echo "ADMIN_PASS=${{ secrets.ADMIN_PASS }}" >> .env
           echo "ADMIN_MAIL=${{ secrets.ADMIN_MAIL }}" >> .env
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
 
 
       - name: Install dependencies
