--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@maptiler/client": "^2.2.0",
     "connect-flash": "^0.1.1",
     "cypress": "^14.0.3",
     "dotenv": "^16.4.7",
