--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@maptiler/client": "^2.2.0",
+    "@maptiler/sdk": "^3.0.1",
     "connect-flash": "^0.1.1",
     "cypress": "^14.0.3",
     "dotenv": "^16.4.7",
