fixing dockerfile amd docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:3000"]
       interval: 10s
       retries: 5
-    entrypoint: /bin/sh -c "npm install dotenv node app.js "
+    # entrypoint: /bin/sh -c "npm install dotenv node app.js "
     volumes:
       - .:/usr/src/app
     stdin_open: true
@@ -32,6 +32,7 @@ services:
     networks:
       - yelpcamp_network
   cypress:
+    container_name: yelpcamp-cypress
     image: "cypress/included:14.0.1"  # Cypress Docker Image
     user: root
     depends_on:
