--- a/.github/cypress-docker.yml
+++ b/.github/cypress-docker.yml
@@ -1,9 +1,10 @@
 name: Run Cypress Tests
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   cypress-docker:
