--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "sanitize-html": "^2.14.0"
+  },
+  "overrides": {
+    "express": "^4.19.2"
   }
 }
